tests/paczka1/small_fuzzy/90012510.err
Error in line 6: 8Q21Ulpn S913 8,32
Error in line 3: 8Q21Ulpn A412 26,2
